# os_in_rust

./: .gitignore  Cargo.toml  Makefile  README.md  x86-64_my_os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
